[fix] fix merge rule table data type transfer error